tests/baselines/reference/optionalParameterProperty.errors.txt
tests/cases/compiler/optionalParameterProperty.ts(5,7): error TS2415: Class 'D' incorrectly extends base class 'C'.
  Types of property 'p' are incompatible.
    Type '数字 | 未定' is not assignable to type '数字'.
      Type '未定' is not assignable to type '数字'.


==== tests/cases/compiler/optionalParameterProperty.ts (1 errors) ====
    class C {
        p: number;
    }
    
    class D extends C { 
          ~
!!! error TS2415: Class 'D' incorrectly extends base class 'C'.
!!! error TS2415:   Types of property 'p' are incompatible.
!!! error TS2415:     Type '数字 | 未定' is not assignable to type '数字'.
!!! error TS2415:       Type '未定' is not assignable to type '数字'.
        constructor(public p?: number) {
            super();
        }
    }
    